First public version 0.0.1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: optimLanduse
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Robust land-use optimization
+Version: 0.0.1
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Kai",
+           family = "Husmann",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "kai.husmann@uni-goettingen.de")
+Description: Robust land-use optimization using stepwise linear iterative optimizations.
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
