--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Authors@R:
            role = "aut",
            email = "jasper.fuchs@uni-goettingen.de"))
 Description: Robust land-use optimization using stepwise linear iterative optimizations.
-License: What license it uses
+License: FALSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Imports: lpSolveAPI, tidyr, dplyr
