--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,4 +20,4 @@ License: FALSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: lpSolveAPI, tidyr, dplyr
+Imports: lpSolveAPI (>= 5.5.2.0-17.7), tidyr (>= 1.1.2), dplyr (>= 1.0.0)
