Minor changes to improve conformity to formal package requirements for CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,6 @@ export(solveScenario)
 import(dplyr)
 import(lpSolveAPI)
 import(tidyr)
+importFrom(stats,na.omit)
+importFrom(stats,setNames)
+importFrom(utils,type.convert)
