--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R:
            role = "aut",
            email = "jasper.fuchs@uni-goettingen.de"))
 Description: Robust land-use optimization using stepwise linear iterative optimizations.
-License: FALSE
+License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
