--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: optimLanduse
 Title: Robust land-use optimization
-Version: 0.0.2
-Authors@R: 
+Version: 0.0.3
+Authors@R:
     c(
     person(given = "Kai",
            family = "Husmann",
@@ -14,10 +14,16 @@ Authors@R:
     person(given = "Jasper",
            family = "Fuchs",
            role = "aut",
-           email = "jasper.fuchs@uni-goettingen.de"))
+           email = "jasper.fuchs@uni-goettingen.de"),
+    person(given = "Kai",
+           family = "Bödeker",
+           role = "aut",
+           email = "kai.boedeker@tum.de")
+           )
 Description: Robust land-use optimization using stepwise linear iterative optimizations.
-License: GPL (>=2)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: lpSolveAPI (>= 5.5.2.0-17.7), tidyr (>= 1.1.2), dplyr (>= 1.0.0)
+Suggests: readxl, ggplot2
