--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: optimLanduse
-Title: Robust land-use optimization
-Version: 0.0.3
+Title: Robust Land-Use Optimization
+Version: 0.0.4
 Authors@R:
     c(
     person(given = "Kai",
@@ -20,10 +20,11 @@ Authors@R:
            role = "aut",
            email = "kai.boedeker@tum.de")
            )
-Description: Robust land-use optimization using stepwise linear iterative optimizations.
+Description: Robust land-use optimization.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: lpSolveAPI (>= 5.5.2.0-17.7), tidyr (>= 1.1.2), dplyr (>= 1.0.0)
 Suggests: readxl, ggplot2
+URL: https://gitlab.gwdg.de/forest_economics_goettingen/optimlanduse
