--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(dataPreparation)
 export(exampleData)
 export(initScenario)
 export(solveScenario)
+export(sumSensitivity)
 import(dplyr)
 import(lpSolveAPI)
 import(tidyr)
+import(xlsx)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(utils,type.convert)
