Last modifications for major update 1.0

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,19 +6,23 @@ Authors@R:
     person(given = "Kai",
            family = "Husmann",
            role = c("aut", "cre"),
-           email = "kai.husmann@uni-goettingen.de"),
+           email = "kai.husmann@uni-goettingen.de",
+           comment = c(ORCID = "0000-0003-2970-4709")),
     person(given = "Volker",
            family = "von Groß",
            role = "aut",
-           email = "volker.vongross@uni-goettingen.de"),
+           email = "volker.vongross@uni-goettingen.de",
+           comment = c(ORCID = "0000-0001-7372-0066")),
     person(given = "Jasper",
            family = "Fuchs",
            role = "aut",
-           email = "jasper.fuchs@uni-goettingen.de"),
+           email = "jasper.fuchs@uni-goettingen.de",
+           comment = c(ORCID = "0000-0001-5951-7897")),
     person(given = "Kai",
            family = "Bödeker",
            role = "aut",
-           email = "kai.boedeker@tum.de"),
+           email = "kai.boedeker@tum.de",
+           comment = c(ORCID = "0000-0002-5307-5108")),
    person("Goettingen University - Forest Economics and Sustainable Land-use Planning",
            role=c("cph", "fnd")),
    person("TUM School of Life Sciences - Forest Management",
