--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: optimLanduse
 Title: Robust Land-Use Optimization
-Version: 1.0.0-999
+Version: 1.1.0
 Authors@R:
     c(
     person(given = "Kai",
