--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(exampleData)
 export(initScenario)
 export(solveScenario)
 import(dplyr)
+import(future)
 import(future.apply)
 import(lpSolveAPI)
 import(tidyr)
