Update to Gurobi instead of lpSolveAPI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(exampleData)
 export(initScenario)
 export(solveScenario)
 import(dplyr)
-import(lpSolveAPI)
+import(gurobi)
 import(tidyr)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
