--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: optimLanduse
 Title: Robust Land-Use Optimization
-Version: 1.2.0
+Version: 1.2.1
 Authors@R:
     c(
     person(given = "Kai",
@@ -23,6 +23,16 @@ Authors@R:
            role = "aut",
            email = "kai.boedeker@tum.de",
            comment = c(ORCID = "0000-0002-5307-5108")),
+    person(given = "Carola",
+           family = "Paul",
+           role = "aut",
+           email = "carola.paul@uni-goettingen.de",
+           comment = c(ORCID = "0000-0002-6257-2026")),
+    person(given = "Thomas",
+           family = "Knoke",
+           role = "aut",
+           email = "knoke@tum.de",
+           comment = c(ORCID = "0000-0003-0535-5946")),
    person("Goettingen University - Forest Economics and Sustainable Land-use Planning",
            role=c("cph", "fnd")),
    person("TUM School of Life Sciences - Forest Management",
